# cmake-opencv

./: CMakeLists.txt  LineSegmentation.cpp  LineSegmentation.hpp  build.sh  main.cpp
